# wasm-vertx-demo

vertx-websocket-server/: README.md  build.sbt
vertx-websocket-server/project/: Docker.scala
vertx-websocket-server/src/main/resources/webroot/www/: bootstrap.js  index.html  index.js  package.json
vertx-websocket-server/src/main/scala/de/codepitbull/vertx/scala/wasm/: Main.scala
vertx-websocket-server/src/main/scala/io/vertx/scala/myapp/: Main.scala
vertx-websocket-server/src/test/scala/de/codepitbull/vertx/scala/wasm/: MainSpec.scala
vertx-websocket-server/src/test/scala/io/vertx/scala/myapp/: MainSpec.scala  VerticleTesting.scala
websocket-plotter-wasm/: Cargo.toml  README.md  cp.sh  start-server.sh
websocket-plotter-wasm/src/: lib.rs
websocket-plotter-wasm/www/: bootstrap.js
