[package]
name = "websocket-plotter-wasm"
version = "0.1.0"
authors = ["Jochen Mader <jochen.mader@codepitbull.de>"]
edition = "2018"

[lib]
crate-type=["cdylib"]

[dependencies]
#quicksilver = "*"
plotters = "^0.2.11"
wasm-bindgen = "0.2"
wee_alloc = "*"
web-sys = { version = "0.3.4", features = ["HtmlCanvasElement"] }
rand = "0.7.2"
getrandom = { version = "0.1.13", features = ["wasm-bindgen"] }
chrono = { version = "0.4", features = ["wasmbind"] }
console_error_panic_hook = "0.1.6"
stdweb = "0.4.20"
serde = "1.0.104"
serde_json = "1.0"
serde_derive = "1.0.104"

[profile.release]
lto = true
